<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.common.SignUpActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">

            <ImageView
                android:id="@+id/btnBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:src="@drawable/ic_back" />

            <ImageView
                android:id="@+id/imgSignUpLogo"
                android:layout_width="210dp"
                android:layout_height="130dp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/ic_logo" />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="15dp">

                <com.project.connectCoder.model.MyGradientTextView
                    android:id="@+id/colorSignUp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Sign up "
                    android:textSize="22sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvSignUpMiddleHeading"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/colorSignUp"
                    android:text="@string/signup_heading"
                    android:textColor="@color/black"
                    android:textSize="22sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvSignUpEndHeading"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tvSignUpMiddleHeading"
                    android:layout_centerHorizontal="true"
                    android:text="@string/your_coders"
                    android:textColor="@color/black"
                    android:textSize="22sp"
                    android:textStyle="bold" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:layout_marginBottom="15dp"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/etName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/full_name"
                    app:boxStrokeWidth="0dp"
                    app:boxStrokeWidthFocused="0dp"
                    app:endIconMode="clear_text"
                    app:startIconDrawable="@drawable/ic_outline_person">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:background="@drawable/edit_text_background"
                        android:inputType="text"
                        android:textColor="@color/black"
                        android:textSize="15sp" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/createUserName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:hint="@string/username"
                    app:boxStrokeWidth="0dp"
                    app:boxStrokeWidthFocused="0dp"
                    app:endIconMode="clear_text"
                    app:startIconDrawable="@drawable/ic_outline_account">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:background="@drawable/edit_text_background"
                        android:inputType="text"
                        android:textColor="@color/black"
                        android:textSize="15sp" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/createEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:hint="@string/email"
                    app:boxStrokeWidth="0dp"
                    app:boxStrokeWidthFocused="0dp"
                    app:endIconMode="clear_text"
                    app:startIconDrawable="@drawable/ic_outline_email">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:background="@drawable/edit_text_background"
                        android:inputType="textEmailAddress"
                        android:textColor="@color/black"
                        android:textSize="15sp" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/createProfession"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:hint="@string/profession"
                    app:boxStrokeWidth="0dp"
                    app:boxStrokeWidthFocused="0dp"
                    app:endIconMode="clear_text"
                    app:startIconDrawable="@drawable/ic_profession">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:background="@drawable/edit_text_background"
                        android:inputType="text"
                        android:textColor="@color/black"
                        android:textSize="15sp" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/createPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:hint="@string/password"
                    app:boxStrokeWidth="0dp"
                    app:boxStrokeWidthFocused="0dp"
                    app:passwordToggleEnabled="true"
                    app:startIconDrawable="@drawable/ic_outline_lock">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:background="@drawable/edit_text_background"
                        android:inputType="textPassword"
                        android:textColor="@color/black"
                        android:textSize="15sp" />
                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/btnSignUp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/btn_primary"
                    android:text="@string/signIn"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    app:backgroundTint="@null" />

            </LinearLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp">

                <TextView
                    android:id="@+id/goToLogin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/already_login"
                    android:textColor="@color/teal_700"
                    android:textSize="15sp" />

                <com.project.connectCoder.model.MyGradientTextView
                    android:id="@+id/colorLogin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@+id/goToLogin"
                    android:text="@string/color_login"
                    android:textSize="15sp" />
            </RelativeLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/progressbar_layout_signup"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerInParent="true">

            <ProgressBar
                android:id="@+id/progressBar_signUp"
                android:layout_width="55dp"
                android:layout_height="55dp"
                android:background="@drawable/progress_bar_background"
                android:indeterminateTint="@color/white"
                android:padding="8dp" />
        </LinearLayout>

    </RelativeLayout>
</ScrollView>