<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.common.LoginActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp">

        <ImageView
            android:id="@+id/imgLoginLogo"
            android:layout_width="210dp"
            android:layout_height="130dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:src="@drawable/ic_logo" />

        <RelativeLayout
            android:id="@+id/loginHeadingContainer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imgLoginLogo"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="25dp">

            <com.project.connectCoder.model.MyGradientTextView
                android:id="@+id/colorLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Log in "
                android:textSize="22sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvLoginMiddleHeading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/colorLogin"
                android:text="@string/login_heading"
                android:textColor="@color/black"
                android:textSize="22sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvLoginEndHeading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvLoginMiddleHeading"
                android:layout_centerHorizontal="true"
                android:text="@string/your_community"
                android:textColor="@color/black"
                android:textSize="22sp"
                android:textStyle="bold" />
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/loginFormContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/loginHeadingContainer"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="15dp"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/loginUserEmailId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp"
                app:endIconMode="clear_text"
                app:startIconDrawable="@drawable/ic_outline_email">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/edit_text_background"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/black"
                    android:textSize="15sp" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/loginPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/pass"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp"
                app:passwordToggleEnabled="true"
                app:startIconDrawable="@drawable/ic_outline_lock">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/edit_text_background"
                    android:inputType="textPassword"
                    android:textColor="@color/black"
                    android:textSize="15sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <CheckBox
                    android:id="@+id/checkboxRememberMe"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/teal_700"
                    android:text="@string/remember_me"
                    android:textColor="@color/teal_700"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/forgetPassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:text="@string/forget_password"
                    android:textColor="@color/teal_700"
                    android:textSize="15sp" />

            </RelativeLayout>

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/btn_primary"
                android:text="@string/login"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:backgroundTint="@null" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:gravity="center">

                <TextView
                    android:id="@+id/goToSignUp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sign_up"
                    android:textColor="@color/teal_700"
                    android:textSize="15sp" />

                <com.project.connectCoder.model.MyGradientTextView
                    android:id="@+id/colorSignUp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@+id/goToSignUp"
                    android:text="@string/color_sign_up"
                    android:textSize="15sp" />

            </RelativeLayout>

        </LinearLayout>

        <RelativeLayout
            android:id="@+id/orView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/loginFormContainer"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp">

            <TextView
                android:id="@+id/tvText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:text="or"
                android:textColor="@color/teal_700" />

            <View
                android:layout_width="100dp"
                android:layout_height="1dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="16dp"
                android:layout_toLeftOf="@id/tvText"
                android:background="@color/edit_text_border_color" />

            <View
                android:layout_width="100dp"
                android:layout_height="1dp"
                android:layout_centerVertical="true"
                android:layout_marginRight="16dp"
                android:layout_toRightOf="@id/tvText"
                android:background="@color/edit_text_border_color" />

        </RelativeLayout>

        <TextView
            android:id="@+id/btnSignUpGoogle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/orView"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:layout_marginTop="35dp"
            android:background="@drawable/google_signup_btn"
            android:drawablePadding="10dp"
            android:gravity="center_vertical"
            android:text="Sign up With Google"
            android:textColor="@color/teal_700"
            android:textSize="16sp"
            app:drawableStartCompat="@drawable/google" />

        <LinearLayout
            android:id="@+id/progressbar_layout_login"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerInParent="true">

            <ProgressBar
                android:id="@+id/progressBar_login"
                android:layout_width="55dp"
                android:layout_height="55dp"
                android:background="@drawable/progress_bar_background"
                android:indeterminateTint="@color/white"
                android:padding="8dp" />
        </LinearLayout>

    </RelativeLayout>
</ScrollView>