<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.insideMain.EditProfileActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/edit_profile_appbar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/edit_profile_appbar_edit_profile"
            style="@style/Widget.MaterialComponents.Toolbar.Primary"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/white">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/btn_discard"
                    android:layout_width="16dp"
                    android:layout_height="16dp"
                    android:layout_centerVertical="true"
                    android:src="@drawable/ic_cancel" />

                <com.project.connectCoder.model.MyGradientTextView
                    android:id="@+id/tv_edit_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="25dp"
                    android:layout_toEndOf="@+id/btn_discard"
                    android:fontFamily="@font/bangers"
                    android:text="Edit Profile"
                    android:textSize="24sp" />

                <ImageView
                    android:id="@+id/btn_save"
                    android:layout_width="25dp"
                    android:layout_height="match_parent"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="20dp"
                    android:src="@drawable/ic_save" />


                <ProgressBar
                    android:id="@+id/nav_progressBar_edit_profile"
                    android:layout_width="55dp"
                    android:layout_height="55dp"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="5dp"
                    android:indeterminateTint="@color/color_primary"
                    android:padding="8dp" />
            </RelativeLayout>

        </com.google.android.material.appbar.MaterialToolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edit_profile_appbar_layout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="122dp"
                android:layout_height="122dp"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                app:cardCornerRadius="16dp">

                <ImageView
                    android:id="@+id/img_edit_profile"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop" />
            </androidx.cardview.widget.CardView>

            <com.project.connectCoder.model.MyGradientTextView
                android:id="@+id/btn_change_profile_photo"
                style="@style/TextAppearance.AppCompat.Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:text="Change Profile Photo"
                android:textSize="18sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edit_profile_name"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="22dp"
                android:hint="@string/full_name"
                app:boxStrokeColor="@color/edit_text_border_color"
                app:endIconMode="clear_text"
                app:hintTextColor="@color/black">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:textColor="@color/black"
                    android:textSize="15sp" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edit_profile_user_name"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/username"
                app:boxStrokeColor="@color/edit_text_border_color"
                app:counterEnabled="true"
                app:counterMaxLength="15"
                app:endIconMode="clear_text"
                app:hintTextColor="@color/black">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:textColor="@color/black"
                    android:textSize="15sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edit_profile_profession"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/profession"
                app:boxStrokeColor="@color/edit_text_border_color"
                app:endIconMode="clear_text"
                app:hintTextColor="@color/black">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:textColor="@color/black"
                    android:textSize="15sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edit_profile_bio"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="Bio"
                app:boxStrokeColor="@color/edit_text_border_color"
                app:counterEnabled="true"
                app:counterMaxLength="250"
                app:endIconMode="clear_text"
                app:hintTextColor="@color/black">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine"
                    android:textColor="@color/black"
                    android:textSize="15sp" />
            </com.google.android.material.textfield.TextInputLayout>


            <Button
                android:id="@+id/btn_save_edit_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="21dp"
                android:layout_marginBottom="50dp"
                android:background="@drawable/btn_primary"
                android:text="Save"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:backgroundTint="@null" />

        </LinearLayout>
    </ScrollView>


    <LinearLayout
        android:id="@+id/progressbar_layout_edit_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

        <ProgressBar
            android:id="@+id/progressBar_editProfile"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:background="@drawable/progress_bar_background"
            android:indeterminateTint="@color/white"
            android:padding="8dp" />
    </LinearLayout>

</RelativeLayout>